Bug 691459 - compiler warnings from clang
Summary: compiler warnings from clang
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Color (show other bugs)
Version: master
Hardware: Other Linux
: P4 normal
Assignee: Michael Vrhel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-14 20:28 UTC by Hin-Tak Leung
Modified: 2011-01-09 02:19 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
trimmed log (removing type casts and unused variables) (10.72 KB, text/plain)
2010-07-14 20:28 UTC, Hin-Tak Leung
Details
full log (604.12 KB, text/plain)
2010-07-14 20:31 UTC, Hin-Tak Leung
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hin-Tak Leung 2010-07-14 20:28:38 UTC
Created attachment 6484 [details]
trimmed log (removing type casts and unused variables)

There are a few switch-enum warning where case statement don't cover all cases: 

./base/gsicc_manage.c:1216:14: warning: enumeration value 'gs_color_space_index_DevicePixel' not handled in switch [-Wswitch-enum]
lcms/src/cmsio1.c:118:8: warning: implicit declaration of function 'swab' is invalid in C99 [-Wimplicit-function-declaration]
./base/gscspace.c:230:13: warning: implicit declaration of function 'gsicc_init_iccmanager' is invalid in C99 [-Wimplicit-function-declaration]
./base/gxcmap.c:1680:1: warning: no previous prototype for function 'cmap_transfer_halftone' [-Wmissing-prototypes]

Probably should pass around color, freetype, jbig2dec, etc.
Comment 1 Hin-Tak Leung 2010-07-14 20:31:01 UTC
Created attachment 6485 [details]
full log

CC=/usr/bin/clang ./configure ; make >& clang-log result from svn head. (11507 plus some local patches).
Comment 2 Michael Vrhel 2011-01-09 02:19:45 UTC
Color warnings fixed with rev 12015