Fix for color related warnings in bug 691459

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@12015 a1074d23-0009-0410-80fe-cf8c14f379e6