gs/base/gxi12bit.c
@@ -37,10 +37,6 @@
 #include "gxcie.h"
 #include "gscie.h"
 
-extern void cmap_transfer_halftone(gx_color_value *pconc, gx_device_color * pdc,
-     const gs_imager_state * pis, gx_device * dev, bool has_transfer,
-     bool has_halftone, gs_color_select_t select);
-
 /* ---------------- Unpacking procedures ---------------- */
 
 static const byte *
